# proc-format

./: .clang-format  .gitignore  .tar-exclude  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG_LOG.md  LICENSE  Makefile  README.md  SECURITY.md  exec-sql-parser.el  proc-format.py  pyproject.toml  s  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
PATCH/: addtl-backport.patch  debug-001.patch  info.patch  progress.patch
ai/codex/: setup.sh
doc/: Additional-Pro-C-Features.md  Developer-Guide.md  Doc-Best-Practices.md  Gap-Analysis-1.md  New-Approach--C-Format-Original-Editor.md  Oracle-Pro-C--Formatting-Notes.md  Oracle-Pro-C-Feature-Breakdown.md  Project-Plan.md  Test-Suite-1.md  Third-Party-Pro-C-Examples.md  User-Guide.md  debug-structure.txt
doc/constructs/: 002.txt  003.txt
doc/dev/: release.md
examples/basic/: call-stored-procedure.pc  expected.pc  oracle+addtl.pc  unformated.pc  unformatted.pc
examples/minimal/: at_db_name.pc  at_db_name_commit.pc  at_db_name_declare_cursor.pc  at_db_name_execute.pc  begin_declare_section.pc  commit_work_release.pc  (+17 more)
issue/: main-vs-emacs-unterminated.failing-tests.txt
ref/: cygwin-version.txt
scripts/: basic  cln  examine-sql  extract-files-from-md  get-exec-sql-types.sh  get-other-samples.sh  get-proc-demo.sh  get-timesten-samples.sh  proc-format  tar  test
tests/: test_capture_exec_sql.py  test_exec_sql_parser.el  test_format_with_clang.py  test_registry.py  test_restore_exec_sql_blocks.py  test_sqlparse_format.py  test_verbose.py
(+12 files in other folders)
